tests/snapshots/edit__remove_input@outputs_no_space_remove_flake-parts.snap
---
source: tests/edit.rs
expression: result
info:
  flake_nix: ""
  changes:
    - Remove:
        ids:
          - flake-parts
---
{
  inputs = {
  };

  outputs = inputs@{...}:
    { };
}
