tests/snapshots/edit__remove_input_walker@root_alt_crane.snap
---
source: tests/edit.rs
expression: result.to_string()
info:
  flake_nix: ""
  changes:
    - Remove:
        id: crane
---
{
  description = "Manage your flake inputs comfortably.";

  inputs = {
    nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";

    flake-utelinos.url = "github:numtide/flake-utils";

    rust-overlay = {
      url = "github:oxalica/rust-overlay";
      inputs = {
        nixpkgs.follows = "nixpkgs";
        flake-utils.follows = "flake-utils";
      };
    };
  };

  outputs = _: { };
}
