tests/snapshots/edit__remove_input_walker@root_alt_nixpkgs.snap
---
source: tests/edit.rs
expression: result.to_string()
info:
  flake_nix: ""
  changes:
    - Remove:
        id: nixpkgs
---
{
  description = "Manage your flake inputs comfortably.";

  inputs = {

    flake-utelinos.url = "github:numtide/flake-utils";

    rust-overlay = {
      url = "github:oxalica/rust-overlay";
      inputs = {
        nixpkgs.follows = "nixpkgs";
        flake-utils.follows = "flake-utils";
      };
    };
    crane = {
      url = "github:ipetkov/crane";
      inputs = {
        nixpkgs.follows = "nixpkgs";
        rust-overlay.follows = "rust-overlay";
        flake-utils.follows = "flake-utils";
      };
    };
  };

  outputs = _: { };
}
