tests/snapshots/edit__remove_nested_input@deeply_nested_inputs_disko_nixpkgs.snap
---
source: tests/edit.rs
expression: result
info:
  flake_nix: ""
  changes:
    - Remove:
        ids:
          - disko.nixpkgs
---
{
  description = "Deeply nested inputs attrset";

  inputs = {
    nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";

    disko = {
      url = "github:nix-community/disko";
    };
  };

  outputs = _: { };
}
