tests/snapshots/edit__remove_nested_input@one_level_nesting_flat_rust-overlay_flake-utils.snap
---
source: tests/edit.rs
assertion_line: 218
expression: result
info:
  flake_nix: ""
  changes:
    - Remove:
        ids:
          - rust-overlay.flake-utils
---
{
  description = "Edit your flake inputs with ease";

  inputs = {
    nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";
    flake-utelinos.url = "github:numtide/flake-utils";
    rust-overlay.url = "github:oxalica/rust-overlay";
    rust-overlay.inputs.nixpkgs.follows = "nixpkgs";
    crane.url = "github:ipetkov/crane";
    crane.inputs.nixpkgs.follows = "nixpkgs";
    crane.inputs.rust-overlay.follows = "rust-overlay";
    crane.inputs.flake-utils.follows = "flake-utils";
  };

  outputs =
    {
      self,
      nixpkgs,
      flake-utils,
      flake-utelinos,
      rust-overlay,
      crane,
    }:
    { };
}
