tests/snapshots/edit__remove_nested_input@root_rust-overlay_flake-utils.snap
---
source: tests/edit.rs
assertion_line: 218
expression: result
info:
  flake_nix: ""
  changes:
    - Remove:
        ids:
          - rust-overlay.flake-utils
---
{
  description = "Manage your flake inputs comfortably.";

  inputs = {
    nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";

    flake-utils.url = "github:numtide/flake-utils";

    rust-overlay = {
      url = "github:oxalica/rust-overlay";
      inputs.nixpkgs.follows = "nixpkgs";
    };
    crane = {
      url = "github:ipetkov/crane";
      inputs.nixpkgs.follows = "nixpkgs";
      inputs.rust-overlay.follows = "rust-overlay";
      inputs.flake-utils.follows = "flake-utils";
    };
  };

  outputs = _: { };
}
